<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="news_desk">News Desk</string>
    <string name="article">Article</string>

    <string name="arts">Arts</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="done">Done</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>

</resources>
