<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.phivle.nytimessearch.fragments.FilterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:textSize="@dimen/fragment_header_size"/>

    <DatePicker
        android:id="@+id/beginDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:textSize="@dimen/fragment_header_size" />

    <Spinner
        android:id="@+id/sortOrderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_array" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk"
        android:textSize="@dimen/fragment_header_size" />

    <CheckBox
        android:id="@+id/checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/arts" />

    <CheckBox
        android:id="@+id/checkbox_fashion_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/fashion_and_style" />

    <CheckBox
        android:id="@+id/checkox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/sports" />

    <Button
        android:id="@+id/filter_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done" />


</LinearLayout>
